# swing_trader

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/agents/: swingcoder.agent.md
src/: __init__.py  main.py
src/crews/: __init__.py  analysis_crew.py  macro_crew.py  strategy_crew.py
src/crews/config/: analysis_agents.yaml  analysis_tasks.yaml  macro_agents.yaml  macro_tasks.yaml  strategy_agents.yaml  strategy_tasks.yaml
src/helpers/: __init__.py  trade_signals.py  utils.py
src/tools/: __init__.py  trading_tools.py
